--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   dio: ^5.8.0+1
   toastification: ^3.0.3
   intl: ^0.19.0
+  pdf: ^3.10.7
+  printing: ^5.12.0
+  path_provider: ^2.1.2
+  permission_handler: ^11.0.1
+  open_file: ^3.3.2
 
 dev_dependencies:
   flutter_test:
